# MailFlow

./: .gitignore  .prettierignore  CHANGELOG.md  eslint.config.js  package-lock.json  package.json  playwright.config.ts  playwright.real.config.ts  tailwind.config.js  tsconfig.json  vite.config.ts  vitest.config.ts  wdio.conf.ts
.cargo/: config.toml
e2e/: app.spec.ts  email-data.spec.ts  email.spec.ts
e2e-real/: real-email.spec.ts
e2e-wdio/: real-email.spec.ts
src/: App.test.tsx  App.tsx  main.tsx  test-connection.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: account_commands.rs  ai_commands.rs  config_commands.rs  email_commands.rs  mod.rs
src-tauri/src/models/: account.rs  config.rs  email.rs  mod.rs
src-tauri/src/services/: ai_service.rs  imap_service.rs  mod.rs  smtp_service.rs  storage_service.rs
src/components/: ComposeModal.tsx  EmailDetail.test.tsx  EmailDetail.tsx  EmailList.test.tsx  EmailList.tsx  SettingsModal.tsx  Sidebar.test.tsx  Sidebar.tsx
src/constants/: email.ts
src/stores/: emailStore.test.ts  emailStore.ts
src/styles/: index.css
src/test/mocks/: store.ts  tauri-api.ts  tauri.ts
src/types/: index.ts
src/utils/: email.test.ts  email.ts  error.test.ts  error.ts
